@@ -111,20 +111,9 @@
 
         <div metal:use-macro="context/batch_macros/macros/navigation" />
 
-        <p tal:define="statusSet view/getStatusSet">
-
-            <select size="1" class="select-widget choice-field"
-                             name="form.widgets.status"
-                             id="form-widgets-status">
-
-                <option tal:repeat="term statusSet" 
-                        tal:attributes="value term/value"
-                        tal:content="term/title">Status Title</option>
-            </select>
-
-           <input type="submit" name="change_status" value="Change status">
-           <input type="submit" name="cancel_orders" value="Cancel orders" class="link-overlay" rel="#pb_2">
-
+        <p>
+           <input type="submit" name="change_status_step1" value="Change status">
+           <input type="submit" name="cancel_orders" value="Cancel orders">
         </p>
 
         <script type="text/javascript" src="++resource++jquery-ui-i18n-manual.js"></script>
